[package]
name = "json_path"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["jsonpath", "json"]
authors = ["Xiaoguang Zhang <zhxiaog@outlook.com>"]
description = "A rust implementation of JsonPath"
documentation = "https://docs.rs/json_path"
readme = "README.md"
repository = "https://github.com/zhxiaogg/jsonpath-rs"
exclude = [".*"]

[lib]
name = "json_path"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
peekmore = "1.3"
