[workspace]
members = [
    "json_path",
    "json_path_bin"
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["jsonpath", "json"]
authors = ["Xiaoguang Zhang <zhxiaog@outlook.com>"]
description = "A Rust implementation of JsonPath"
repository = "https://github.com/zhxiaogg/jsonpath-rs"
exclude = [".*"]