[package]
name = "json_path"
documentation = "https://docs.rs/json_path"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
name = "json_path"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
peekmore = "1.3"
