[package]
name = "json_path_bin"
documentation = "https://docs.rs/json_path_bin"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde_json = "1.0"
json_path = { path = "../json_path", version = "0.1" }
clap = { version = "4.3.10", features = ["derive"] }
